--- a/index.html
+++ b/index.html
@@ -13,20 +13,18 @@
 </head>
 <body>
 
-  <div class="card">
+  <main class="card">
 
     <div class="inside">
-      <div class="img-cont">
-        <img src="./images/image-qr-code.png" alt="">
-      </div>
+      <img src="./images/image-qr-code.png" alt="qr-code">
       <div class="desc">
-        <h4>Improve your front-end skills by building projects</h4>
+        <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visti Frontend Mentor and take your coding skills to the next level</p>
       </div>
     </div>
     
 
-  </div>
+  </main>
 
 </body>
 </html>
